# optimization_cpp

./: CMakeLists.txt  README.md  main.cpp
include/: example_prob.hpp  opt_problem.hpp
src/: example_prob.cpp  opt_problem.cpp  run_examples.cpp
